ultima ultima actualizacion

--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 <li>Piña</li>
 <li>Cereza</li>
 <li>Naranja</li>
-
-
-
 </ol>
-
-<input type="button" value="Ingresar" id="ingresar"/>
+<option value=""></option>
+<input type="text" id="ingresar" placeholder="fruta" size="15" maxlength="30" ></input>
 <script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
 </html>
