--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <li>Cereza</li>
 <li>Naranja</li>
 </ol>
-<option value=""></option>
 <input type="text" id="ingresar" placeholder="fruta" size="15" maxlength="30" ></input>
+<input type="button" value="Ingresar" id="ingresar"/>
+
 <script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
 </html>
